--- a/package.json
+++ b/package.json
@@ -12,10 +12,27 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.812.0",
+		"@aws-sdk/s3-request-presigner": "^3.812.0",
+		"@clerk/nextjs": "^6.19.5",
+		"@hookform/resolvers": "^5.0.1",
 		"@opennextjs/cloudflare": "^1.0.2",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-checkbox": "^1.3.2",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.7",
+		"@uploadthing/react": "^7.3.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.511.0",
 		"next": "15.3.2",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.56.4",
+		"tailwind-merge": "^3.3.0",
+		"uploadthing": "^7.7.2",
+		"zod": "^3.25.10"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -26,6 +43,7 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.3.2",
 		"tailwindcss": "^4",
+		"tw-animate-css": "^1.3.0",
 		"typescript": "^5",
 		"wrangler": "^4.16.0"
 	}
